# distilabel

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CNAME  CUDA.Dockerfile  LICENSE  Makefile  README.md  example_code.py  generate_dataset.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml  try.py  versions.json
0.1.0/: 404.html  CNAME  index.html  objects.inv  sitemap.xml
0.1.0rc1/: 404.html  index.html  sitemap.xml
0.1.1/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0/: 404.html  index.html  sitemap.xml
0.2.1/: 404.html  index.html  objects.inv  sitemap.xml
0.3.0/: 404.html  index.html  sitemap.xml
0.4.0/: 404.html  index.html  objects.inv  sitemap.xml
0.5.0/: 404.html  index.html  objects.inv  sitemap.xml
0.6.0/: 404.html  index.html  sitemap.xml
1.0.0/: 404.html  index.html  sitemap.xml
1.0.1/: 404.html  index.html  sitemap.xml
1.0.2/: 404.html  index.html  sitemap.xml
1.0.3/: 404.html  index.html  sitemap.xml
1.1.0/: 404.html  index.html  objects.inv  sitemap.xml
1.1.1/: 404.html  index.html  sitemap.xml
1.2.0/: 404.html  index.html  objects.inv  sitemap.xml
1.2.1/: 404.html  index.html  sitemap.xml
1.2.2/: 404.html  index.html  sitemap.xml
1.2.3/: 404.html  index.html  sitemap.xml
1.2.4/: 404.html  index.html  objects.inv  sitemap.xml
1.3.0/: 404.html  index.html  sitemap.xml
1.3.1/: 404.html  index.html  sitemap.xml
1.3.2/: 404.html  index.html  sitemap.xml
1.4.0/: 404.html  index.html  sitemap.xml
1.4.1/: 404.html  index.html  sitemap.xml
1.4.2/: 404.html  index.html  sitemap.xml
1.5.0/: 404.html  index.html  sitemap.xml
1.5.1/: 404.html  index.html  sitemap.xml
1.5.2/: 404.html  index.html  sitemap.xml
1.5.3/: 404.html  index.html  sitemap.xml
concepts/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
docker/: CUDA.Dockerfile  Dockerfile  docker-compose.yaml  local.Dockerfile
docs/: concepts.md  guides.md  index.md  instruct.md  llm.md  overview.md  preference.md
examples/: anyscale-endpoints.py  arena_hard.py  basic-judgelm.py  benchmark_preference_tasks.py  deepseek_prover.py  draw_kg.py  exam_questions.py  finepersonas_social_ai.py  image_generation.py  inference-endpoints-llm-custom-task.py  inference-endpoints-llm.py  label-dataset-using-judgelm.py  lib_apigen.py  pipe_math_shepherd.py  pipeline-accelerate-and-openai.py  pipeline-anyscale-endpoints.py  pipeline-chat.py  pipeline-evol-instruct-alpaca.py  pipeline-fn-ultrafeedback-labeller.py  pipeline-fn-ultrafeedback.py  pipeline-llamacpp-and-openai-process.py  pipeline-llamacpp-and-openai.py  pipeline-ollama.py  pipeline-openai-wizardlm-equal-prompts.py  pipeline-pool-llm.py  pipeline-preference-dataset-llmpool.py  pipeline-prometheus.py  pipeline-replicate.py  pipeline-selfinstruct-math-openai.py  pipeline-to-argilla.py  pipeline-together-inference.py  pipeline-transformers-and-openai.py  pipeline-ultracm.py  pipeline-vllm-and-openai.py  pipeline_apigen.py  rpg_characters_llamacpp.py  structured_generation_with_instructor.py  structured_generation_with_outlines.py  text_generation_with_image.py  use-custom-template-for-dpo.py  (+5 more)
guides/: index.html
latest/: 404.html  index.html  sitemap.xml
learn/: index.html
notebooks/: intro.ipynb  pipeline.ipynb  self-instruct.ipynb
pipelines/: single_page_qa.py
pr-1006/: 404.html  index.html  objects.inv  sitemap.xml
pr-1009/: 404.html  index.html  sitemap.xml
pr-1012/: 404.html  index.html  sitemap.xml
pr-1013/: 404.html  index.html  sitemap.xml
pr-1017/: 404.html  index.html  sitemap.xml
pr-1018/: 404.html  index.html  sitemap.xml
pr-1021/: 404.html  index.html  sitemap.xml
pr-1022/: 404.html  index.html  sitemap.xml
pr-1023/: 404.html  index.html  objects.inv  sitemap.xml
pr-1024/: 404.html  index.html  sitemap.xml
pr-1027/: 404.html  index.html  objects.inv  sitemap.xml
pr-1028/: 404.html  index.html  objects.inv  sitemap.xml
pr-1029/: 404.html  index.html  objects.inv  sitemap.xml
pr-1031/: 404.html  index.html  objects.inv  sitemap.xml
pr-1032/: 404.html  index.html  sitemap.xml
pr-1033/: 404.html  index.html  sitemap.xml
pr-1034/: 404.html  index.html  objects.inv  sitemap.xml
pr-1039/: 404.html  index.html  sitemap.xml
pr-1045/: 404.html  index.html  objects.inv  sitemap.xml
pr-1052/: 404.html  index.html  objects.inv  sitemap.xml
pr-1053/: 404.html  index.html  sitemap.xml
pr-1054/: 404.html  index.html  sitemap.xml
pr-1055/: 404.html  index.html  objects.inv  sitemap.xml
pr-1057/: 404.html  index.html  sitemap.xml
pr-1060/: 404.html  index.html  objects.inv  sitemap.xml
pr-1061/: 404.html  index.html  objects.inv  sitemap.xml
pr-1063/: 404.html  index.html  sitemap.xml
pr-1066/: 404.html  index.html  objects.inv  sitemap.xml
pr-1072/: 404.html  index.html  sitemap.xml
pr-1073/: 404.html  index.html  objects.inv  sitemap.xml
pr-1074/: 404.html  index.html  sitemap.xml
pr-1075/: 404.html  index.html  objects.inv  sitemap.xml
pr-1076/: 404.html  index.html  objects.inv  sitemap.xml
pr-1077/: 404.html  index.html  sitemap.xml
pr-1078/: 404.html  index.html  sitemap.xml
pr-1079/: 404.html  index.html  objects.inv  sitemap.xml
pr-1080/: 404.html  index.html  sitemap.xml
pr-1082/: 404.html  index.html  sitemap.xml
pr-1083/: 404.html  index.html  sitemap.xml
pr-1084/: 404.html  index.html  objects.inv  sitemap.xml
pr-1086/: 404.html  index.html  sitemap.xml
pr-1087/: 404.html  index.html  sitemap.xml
pr-1089/: 404.html  index.html  objects.inv  sitemap.xml
pr-1092/: 404.html  index.html  objects.inv  sitemap.xml
pr-1093/: 404.html  index.html  sitemap.xml
pr-1094/: 404.html  index.html  sitemap.xml
pr-1095/: 404.html  index.html  sitemap.xml
pr-1096/: 404.html  index.html  objects.inv  sitemap.xml
pr-1097/: 404.html  index.html  sitemap.xml
pr-1098/: 404.html  index.html  objects.inv  sitemap.xml
pr-1099/: 404.html  index.html  sitemap.xml
pr-1100/: 404.html  index.html  sitemap.xml
pr-1101/: 404.html  index.html  (+1 more)
(+33014 files in other folders)
